--- a/rest_mvc_boilerplate-service/pom.xml
+++ b/rest_mvc_boilerplate-service/pom.xml
@@ -113,6 +113,13 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
