--- a/rest_mvc_boilerplate-service/src/main/resources/application.yaml
+++ b/rest_mvc_boilerplate-service/src/main/resources/application.yaml
@@ -1,11 +1,10 @@
-
 # INFO ENDPOINT CONFIGURATION
-#info.app:
-#  name: @project.name@
-#  description: @project.description@
-#  version: @project.version@
-#  encoding: @project.build.sourceEncoding@
-#  java.version: @java.version@
+info.app:
+  name: '@project.name@'
+  description: '@project.description@'
+  version: '@project.version@'
+  encoding: '@project.build.sourceEncoding@'
+  java.version: '@java.version@'
 
 jasypt:
   encryptor:
