--- a/rest_mvc_boilerplate-service/src/main/resources/application.yaml
+++ b/rest_mvc_boilerplate-service/src/main/resources/application.yaml
@@ -15,11 +15,14 @@ management:
   endpoints:
     web:
       exposure:
-        include: env,flyway,info
+        include: env,flyway,info,health,startup,loggers
   endpoint:
     health:
       show-details: always
-
+  info:
+    env.enabled: true
+    java.enabled: true
+    os.enabled: true
 spring:
   flyway:
     schemas: rest_mvc_boilerplate
