--- a/rest_mvc_boilerplate-service/pom.xml
+++ b/rest_mvc_boilerplate-service/pom.xml
@@ -110,6 +110,12 @@
             <artifactId>postgresql</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
