--- a/bp-service/pom.xml
+++ b/bp-service/pom.xml
@@ -34,6 +34,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
         </dependency>
@@ -63,6 +68,11 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
 
         <dependency>
@@ -169,24 +179,21 @@
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
-                <!--
-                Plugin ref: https://openapi-generator.tech
-                -->
                 <executions>
                     <execution>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>
-                                ${project.basedir}/../documentation/api/bp-openapi.yaml
-                            </inputSpec>
+                            <inputSpec> ${project.basedir}/../documentation/api/bp-openapi.yaml</inputSpec>
                             <generatorName>spring</generatorName>
+                            <cleanupOutput>true</cleanupOutput>
                             <modelNameSuffix>ApiSchema</modelNameSuffix>
                             <configOptions>
                                 <apiPackage>br.com.aqueteron.bp.api</apiPackage>
                                 <dateLibrary>java8</dateLibrary>
                                 <documentationProvider>springdoc</documentationProvider>
+                                <hateoas>true</hateoas>
                                 <hideGenerationTimestamp>true</hideGenerationTimestamp>
                                 <interfaceOnly>true</interfaceOnly>
                                 <modelPackage>br.com.aqueteron.bp.api.model</modelPackage>
@@ -196,6 +203,7 @@
                                 <useTags>true</useTags>
                                 <library>spring-boot</library>
                                 <requestMappingMode>api_interface</requestMappingMode>
+<!--                                <useOneOfInterfaces>true</useOneOfInterfaces>-->
                             </configOptions>
                         </configuration>
                     </execution>
@@ -222,7 +230,12 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok-mapstruct-binding</artifactId>
-                            <version>0.2.0</version>
+                            <version>${lombok-mapstruct-binding.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct.extensions.spring</groupId>
+                            <artifactId>mapstruct-spring-extensions</artifactId>
+                            <version>${mapstruct-spring-extensions.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
