--- a/docker/docker-compose-stand-alone.yml
+++ b/docker/docker-compose-stand-alone.yml
@@ -1,23 +1,46 @@
 version: "3.0"
 services:
   postgres:
-    image: postgres:latest
-    container_name: rest_mvc_boilerplate_postgres_local
+    image: postgres:17
+    container_name: bp_postgres
+    networks:
+      - default-network
     environment:
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: rest_mvc_boilerplate
+      POSTGRES_USER: bpuser
+      POSTGRES_PASSWORD: bppassword
+      POSTGRES_DB: bp_database
       TZ: UTC
     ports:
       - 5432:5432
     volumes:
       - ./postgres/data:/var/lib/postgresql/data
-  application:
-    image: rest_mvc_boilerplate-service:0.0.1-SNAPSHOT
-    container_name: rest_mvc_boilerplate_local
+  bp-service:
+    image: bp-service:0.0.1-SNAPSHOT
+    container_name: bp-service
+    networks:
+      - default-network
     ports:
-      - 8080:8080
+      - 8443:8443
     depends_on:
       - postgres
+  nginx:
+    image: nginx:latest
+    container_name: bp_nginx
+    networks:
+      - default-network
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/people_register_dev.crt:/etc/nginx/people_register_dev.crt:ro
+      - ./nginx/people_register_dev.privkey.pem:/etc/nginx/people_register_dev.privkey.pem:ro
+    ports:
+      - "443:443"
+    healthcheck:
+      test: ["CMD", "service", "nginx", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    depends_on:
+      - bp-service
 networks:
   default-network:
     driver: bridge
