--- a/bp-service/pom.xml
+++ b/bp-service/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -121,6 +122,17 @@
             <artifactId>archunit-junit5</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- Observability -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -169,7 +181,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec> ${project.basedir}/../documentation/api/bp-openapi.yaml</inputSpec>
+                            <inputSpec>${project.basedir}/../documentation/api/bp-openapi.yaml</inputSpec>
                             <generatorName>spring</generatorName>
                             <cleanupOutput>true</cleanupOutput>
                             <modelNameSuffix>ApiSchema</modelNameSuffix>
