--- a/docker/docker-compose-stand-alone.yml
+++ b/docker/docker-compose-stand-alone.yml
@@ -41,6 +41,41 @@ services:
       retries: 5
     depends_on:
       - bp-service
+  prometheus:
+    image: prom/prometheus
+    container_name: bp_prometheus
+    networks:
+      - default-network
+    command:
+      - '--web.external-url=/prometheus/'
+      - '--web.config.file=/prometheus/web-config.yml'
+    volumes:
+      - ./prometheus/prometheus.yml:/prometheus/prometheus.yml:ro
+      - ./prometheus/web-config.yml:/prometheus/web-config.yml:ro
+      - ./prometheus/data:/prometheus
+      - ./prometheus/unsafe_root_ca.crt:/prometheus/unsafe_root_ca.crt:ro
+      - ./prometheus/prometheus_dev_unsafe_root_ca.crt:/prometheus/prometheus_dev_unsafe_root_ca.crt:ro
+      - ./prometheus/prometheus_dev_unsafe_root_ca.privkey.pem:/prometheus/prometheus_dev_unsafe_root_ca.privkey.pem:ro
+    ports:
+      - "9090:9090"
+  grafana:
+    image: grafana/grafana-oss
+    container_name: bp_grafana
+    networks:
+      - default-network
+#    restart: unless-stopped
+    volumes:
+      - ./grafana/grafana.ini:/etc/grafana/grafana.ini:ro
+      - ./grafana/data:/var/lib/grafana
+      - ./grafana/grafana_dev_unsafe_root_ca.crt:/grafana/grafana_dev_unsafe_root_ca.crt:ro
+      - ./grafana/grafana_dev_unsafe_root_ca.privkey.pem:/grafana/grafana_dev_unsafe_root_ca.privkey.pem:ro
+    ports:
+      - "3000:3000"
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: bp_zipkin
+    ports:
+      - "9411:9411"
 networks:
   default-network:
     driver: bridge
