--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -23,10 +23,27 @@ http {
 
         location /bp {
             proxy_pass      https://bp-service:8443/bp;
-#             proxy_set_header Host $host; # Forwarded host
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_redirect off;
+            proxy_set_header Host $host; # Forwarded host
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_redirect off;
         }
+
+        location /prometheus/ {
+            proxy_pass      https://bp_prometheus:9090;
+            proxy_set_header Host $host; # Forwarded host
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_redirect off;
+        }
+
+        location /grafana/ {
+            proxy_pass      https://bp_grafana:3000;
+            proxy_set_header Host $host; # Forwarded host
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_redirect off;
+        }
+
     }
 }
