--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <name>Rest MVC Boilerplate - Project</name>
+    <scm>
+        <developerConnection>scm:git:git@github.com:kurata/rest-mvc-boilerplate.git</developerConnection>
+    </scm>
 
     <modules>
         <module>bp-service</module>
@@ -54,6 +57,7 @@
         <git-commit-id-maven-plugin.version>9.0.1</git-commit-id-maven-plugin.version>
         <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
         <dockerfile-maven-plugin.version>1.4.13</dockerfile-maven-plugin.version>
+        <maven-release-plugin.version>3.3.1</maven-release-plugin.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct-spring-extensions.version>1.1.3</mapstruct-spring-extensions.version>
     </properties>
@@ -273,6 +277,12 @@
                     <groupId>com.spotify</groupId>
                     <artifactId>dockerfile-maven-plugin</artifactId>
                     <version>${dockerfile-maven-plugin.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>${maven-release-plugin.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
