--- a/bp-service/pom.xml
+++ b/bp-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>br.com.aqueteron</groupId>
         <artifactId>bp</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>bp-service</artifactId>
